src/main/java/com/revolvingmadness/testing/language/errors/IndexOutOfBoundsError.java
package com.revolvingmadness.testing.language.errors;

public class IndexOutOfBoundsError extends Error {
    public IndexOutOfBoundsError(String message) {
        super(message);
    }
}
